text(articles): several changes to pass tests