@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.1'
 	id 'io.spring.dependency-management' version '1.1.5'
+	id 'com.adarshr.test-logger' version '4.0.0'
 }
 
 group = 'com.personalspring'
@@ -46,26 +47,30 @@ tasks.named('test') {
         useJUnitPlatform()
 }
 
-// testlogger {
-//     theme 'mocha'
-//     showExceptions true
-//     showStackTraces true
-//     showFullStackTraces false
-//     showCauses true
-//     slowThreshold 2000
-//     showSummary true
-//     showSimpleNames false
-//     showPassed true
-//     showSkipped true
-//     showFailed true
-//     showOnlySlow false
-//     showStandardStreams true
-//     showPassedStandardStreams true
-//     showSkippedStandardStreams true
-//     showFailedStandardStreams true
-//     logLevel 'lifecycle'
-// }
+testlogger {
+    theme 'mocha'
+    showExceptions true
+    showStackTraces true
+    showFullStackTraces false
+    showCauses true
+    slowThreshold 2000
+    showSummary true
+    showSimpleNames false
+    showPassed true
+    showSkipped true
+    showFailed true
+    showOnlySlow false
+    showStandardStreams true
+    showPassedStandardStreams true
+    showSkippedStandardStreams true
+    showFailedStandardStreams true
+    logLevel 'lifecycle'
+}
 
 bootRun {
     jvmArgs = ["-Dspring.output.ansi.enabled=ALWAYS"]
+}
+
+test {
+  jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading")
 }
